# modern_ml

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: cifar10.ipynb  llama_play.ipynb  transformer.ipynb
src/modern_ml/: __init__.py  cli.py
src/modern_ml/models/: basic_cnn.py  transformer.py
tests/: __init__.py  test_modern_ml.py
