[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modern_ml"
version = "0.1.0"
description = "This repo is for teaching and implementing modern machine learning methods"
readme = "README.rst"
authors = [
  {name = "Benjamin Suutari", email = "ben.suutari@gmail.com"}
]
maintainers = [
  {name = "Benjamin Suutari", email = "ben.suutari@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/bensuutari/modern_ml/issues"
changelog = "https://github.com/bensuutari/modern_ml/blob/master/changelog.md"
homepage = "https://github.com/bensuutari/modern_ml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

